[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Enemies/tank-unit.png" type="Texture" id=1]
[ext_resource path="res://Scripts/BasicEnemyController.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 128, 64 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "walking",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 50, 24 )

[node name="Tank-Unit" type="Area2D" groups=[
"enemy",
]]
collision_layer = 513
script = ExtResource( 2 )
enemy_health = 5
enemy_speed = 28
enemy_points = 10

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -7 )
frames = SubResource( 5 )
animation = "walking"
frame = 3
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -54, -33 )
scale = Vector2( 3.375, 1.8125 )
rect = Rect2( 0, 0, 32, 32 )

[node name="OutOfMind" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="viewport_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="timeout" from="OutOfMind" to="." method="_on_OutOfMind_timeout"]
